--- a/site/src/pages/TaskDetailsPage/TaskDetailsPage.module.scss
+++ b/site/src/pages/TaskDetailsPage/TaskDetailsPage.module.scss
@@ -82,7 +82,7 @@
 
 .taskList li {
   display: grid;
-  grid-template-columns: auto minmax(0, 1fr);
+  grid-template-columns: 1.375rem minmax(0, 1fr);
   gap: 0.625rem;
   align-items: start;
   margin: 0;
@@ -95,7 +95,13 @@
   padding: 0.625rem 0.75rem;
 }
 
+.taskListText {
+  display: block;
+  min-width: 0;
+}
+
 .taskList:where(ul) li::before {
+  justify-self: center;
   width: 0.375rem;
   height: 0.375rem;
   margin-top: 0.55rem;
